Modify config param to model from modelName
Also add OPENAI_BASE_URL to README to allow for override of the URL to point to your own OpenAI compatibale API.

--- a/config.yaml
+++ b/config.yaml
@@ -3,7 +3,7 @@
 # # The backend to use.
 # backend: "openai"
 # # The model to use.
-# modelName: "gpt-4o"
+# model: "gpt-4o"
 # # Whether or not to stream output.
 # stream: true
 # Optional system prompt.
